compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_record.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1088
expression: "\nrecord A {\n    One\n    Two\n    3\n}\n"
---
----- SOURCE CODE

record A {
    One
    Two
    3
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:5:5
  │
5 │     3
  │     ^ I was not expecting this

Found an Int, expected one of: 
- `}`
- a record constructor
